[package]
name = "installer"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
native-windows-gui = {path = "../native-windows-gui/native-windows-gui", features=["no-styling", "embed-resource", "list-view", "cursor"]}
native-windows-derive = {path = "../native-windows-gui/native-windows-derive"}
winapi = { version = "*", features = ["libloaderapi", "wingdi", "winuser", "shellapi" ] }
extras = { path = "../extras" }
reqwest = { version = "0.12.3", features = ["blocking", "json", "stream"] }
dirs = "4.0"
tokio = { version = "1", features = ["full"] }
directories = "4.0"
futures-util = "0.3"

[build-dependencies]
embed-resource = "2.4.2"

[features]
image-decoder = []

